--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container" style="width:1300px;"> 
   <!-- Header -->
   <header class="header">
-    <h1 class="logo"><font size="7">Minhao Cui</font></h1>
+    <h1 class="logo"><font size="7">Welcome to the Homepage of ysuAIoT</font></h1>
   </header>
   <!-- Hero Section -->
   <section class="intro">
