--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Hero Section -->
   <section class="intro">
     <div class="column">
-	  <img src="./files/self.png" style="width: 200px" alt="self"> </div>
+	  <img src="./files/yanming.jpg" style="width: 200px" alt="self"> </div>
     <div class="column" deep="2">
       <p><font size="5">I am currently a fifth-year Ph.D. student at Manning College of Information and Computer Sciences, University of Massachusetts Amherst under supervision of <a href="https://people.cs.umass.edu/~jxiong/pub.html" style="color:white;">Prof. Jie Xiong</a>. I also closely work with <a href="https://www.st.ewi.tudelft.nl/qing/" style="color:white;">Prof. Qing Wang</a> from TU Delft. </font></p>
       <p><font size="5">My reserach topic is Visible Light Communication, especially for the side-channel of Visible Light Communication systems and Wireless Sensing.</font></p>
