--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>燕山大学智能物联系统团队主页 Homepage of ysuAIoT</title>
+<title>燕山大学ysuAIoT团队主页</title>
 <link href="./files/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -12,7 +12,10 @@
 <div class="container" style="width:1300px;"> 
   <!-- Header -->
   <header class="header">
-    <h1 class="logo"><font size="7">Welcome to the Homepage of ysuAIoT</font></h1>
+    <h1 class="logo">
+      	<font size="3">欢迎光临燕山大学ysuAIoT团队主页</font>
+	<font size="4">Welcome to ysuAIoT Group Homepage</font>
+    </h1>
   </header>
   <!-- Hero Section -->
   <section class="intro">
