--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
   <!-- Header -->
   <header class="header">
     <h1 class="logo">
-      	<font size="3">欢迎光临燕山大学ysuAIoT团队主页</font>
+      	<font size="3">欢迎光临燕山大学ysuAIoT团队主页</font><br>
 	<font size="4">Welcome to ysuAIoT Group Homepage</font>
     </h1>
   </header>
   <!-- Hero Section -->
   <section class="intro">
     <div class="column">
-	  <img src="./files/yanming.jpg" style="width: 200px" alt="self"> </div>
+	  <img src="./files/yanming.jpg" style="width: 800px" alt="self"> </div>
     <div class="column" deep="2">
-      <p><font size="5">I am currently a fifth-year Ph.D. student at Manning College of Information and Computer Sciences, University of Massachusetts Amherst under supervision of <a href="https://people.cs.umass.edu/~jxiong/pub.html" style="color:white;">Prof. Jie Xiong</a>. I also closely work with <a href="https://www.st.ewi.tudelft.nl/qing/" style="color:white;">Prof. Qing Wang</a> from TU Delft. </font></p>
-      <p><font size="5">My reserach topic is Visible Light Communication, especially for the side-channel of Visible Light Communication systems and Wireless Sensing.</font></p>
+      <p><font size="5">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by Prof. Wenyuan Liu in the School of Information Science and Engineering at <a href="https://www.ysu.edu.cn" style="color:white;">Yanshan University</a>, Qinhuangdao, China. 
+	 The ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province.</p>
+      <p><font size="5">Our reserach topic is Intelligent Sensing and Mobile Computing for the activity recognition in elderly healthcare with diverse multiple modalities, including Camera, Audio, WiFi, RFID, mmWave Radar, IMU, and etc.</font></p>
 	  <p><font size="5">Email: minhaocui at cs.umass.edu</font></p>
     </div>
   </section>
