--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	  <img src="./files/yanming.jpg" style="width: 600px" alt="self"> </div>
     <div class="column" deep="2">
       <p><font size="5">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by Prof. Wenyuan Liu in the School of Information Science and Engineering at <a href="https://www.ysu.edu.cn" style="color:white;">Yanshan University</a>, Qinhuangdao, China. 
-	 The ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province.</p>
+	 ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province.</p>
       <p><font size="5">Our reserach topic is Intelligent Sensing and Mobile Computing for the activity recognition in elderly healthcare with diverse multiple modalities, including Camera, Audio, WiFi, RFID, mmWave Radar, IMU, and etc.</font></p>
 	  <p><font size="5">Email: ysuaiot@gmail.com; wyliu@ysu.edu.cn</font></p>
     </div>
