--- a/index.html
+++ b/index.html
@@ -105,69 +105,51 @@
 
 		<!---研究项目---->
 		<div class="container" style="width:1000px;float:left;">	
-			  <section class="project">
-					<h1 style="color:;"><font size="6"><strong>Projects and Funds</strong></font></h1>
-			  <div>
-					<div style="width:450px;float:left;"> <img src="./files/mobicom_dancingant.png" width="400px" alt="mobicom_dancingant"> </div>
-					<br>
-					<div style="width:500px;float:right;">
-						<p> <font size="4"> We utilize the leaked EM signals from the powerline to conduct wireless sensing with the help of human body. The targets only needs to wear a small and cheap ring antenna on their fingers, the proposed system can recognize the motions of the whole body.</font></p>
-						<p><font size="4"><a href="https://dl.acm.org/doi/10.1145/3570361.3613272">MobiCom 2023 paper</a></font></p>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-					</div>
-			</div>
-			<div>
-				<div style="width:450px;float:left;"><img src="./files/sensys_bracelet.png" width="420px" alt="sensys_bracelet"> </div>
-				<br>
-				<div style="width:500px;float:right;">
-					<p> <font size="4"> We utilize the human body to improve the energy harvesting performance. The wearable bracelet antenna is designed to harvest more leaked energy from the VLC systems with the help of human body.</font></p>
-					<p><font size="4"><a href="https://dl.acm.org/doi/10.1145/3560905.3568526">SenSys 2022 paper</a></font></p>
-					<br>
-					<br>
-					<br>
-				</div>
-			</div>
-			<div>&nbsp;</div> 
-			<div>&nbsp;</div> 
-			<div>
-				<div style="width:450px;float:left;"><img src="./files/radioinlight_led.png" width="420px" alt="radioinlight_led"> </div>
-				<br>
-				<div style="width:500px;float:right;">
-					<p> <font size="4"> We utilize the leaked side channel signals of VLC to transmit additional data bits for communication. Without too much hardware modification and energy cost, we can double the data rate of the VLC systems with our novel design. </font></p>
-					<p><font size="4"><a href="https://dl.acm.org/doi/pdf/10.1145/3447993.3483271">MobiCom 2021 paper</a></font></p>
-					<br>
-					<br>
-					<br>
-				</div>
-			</div>
-			<div>&nbsp;</div> 
-			<div>&nbsp;</div> 
-			<div>
-				<div style="width:450px;float:left;">
-					<img src="./files/Sensys_led.png" width="420px" alt="sensys_led"> </div>
-					<br>
-				<div style="width:500px;float:right;">
-					<p> <font size="4"> We utilize the side channel of VLC - a Radio Frequency (RF) channel created unintentionally during the transmission process of VLC - to break the VLC limitations:i) surrounding objects can easily block VLC links, and ii) intense ambient light can saturate the photodiodes of VLC receivers.</font></p>
-					<p><font size="4"><a href="https://dl.acm.org/doi/pdf/10.1145/3384419.3430728">SenSys 2020 paper</a></font></p>
-					<br>
-					<br>
-				</div>
-				</div>
-
-			<div>
-				<div style="width:450px;float:left;"><img src="./files/mobicom_led.png" width="420px"></div>
-				<br>
-				<div style="width:500px;float:right;">
-					<p> <font size="4">In this paper, for the first time, we show that VLC is not as secure as people thought: VLC can be sniffed through walls! The key principle behind this is that in VLC transmissions, a VLC transmitter not only emits visible light signals but also leaks out `side channel RF signals'.</font></p>
-					<p><font size="4"><a href="https://dl.acm.org/doi/10.1145/3372224.3419187">MobiCom 2020 paper</a>, <a href="https://www.youtube.com/watch?v=zPlSGbU_KpA">5 min elevetor pitch video</a>, <a href="https://www.youtube.com/watch?v=Sb5lP046uPU">Full presentation video </a> </font></p>
-				</div>
-			</div>
-		</section>
-		</div>	
+			<section class="publication">
+					<h1><font size="6"><strong>Projects and Funds</strong></font></h1>
+					<ul>
+							<li><font size="4"> EVLeSen: In-Vehicle Sensing with EV-Leaked Signal</font><br>
+								<font size="4"><strong>Minhao Cui</strong>, Binbin Xie, Qing Wang, Jie Xiong </font><br>
+								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><font size="4"> AquaKey: Exploiting the Randomness of the Underwater Visible Light Communication Channel for Key Extraction</font><br>
+								<font size="4">Lupeng Zhang, Pingchuan Wang, <strong>Minhao Cui</strong>, Jingwen Wei, Yu Tian, Jingchi Zhang, Jie Xiong, Lei Wang. </font><br>
+								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/10.1145/3631417" style="color: black;"><font size="4"> Wall Matters: Rethinking the Effect of Wall for Wireless Sensing</font></a><br>
+							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Jie Xiong. </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/10.1145/3570361.3613272" style="color: black;"><font size="4"> DancingAnt: Body-empowered Wireless Sensing Utilizing Pervasive Radiations from Powerline</font></a><br>
+							<font size="4"><strong>Minhao Cui</strong>, Binbin Xie, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/10.1145/3565287.3610262" style="color: black;"><font size="4"> LeakageScatter: Backscattering LiFi-leaked RF Signals </font></a><br>
+							<font size="3"> Muhammad Sarmad Mir<sup>*</sup>, <strong>Minhao Cui</strong><sup>*</sup>, Borja Genoves Guzman, Qing Wang, Jie Xiong, Domenico Giustiniano</font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/abs/10.1145/3581791.3596847" style="color: black;"><font size="4"> Boosting the Long Range Sensing Potential of LoRa</font></a><br>
+							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Xiangru Chen, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/10.1145/3560905.3568526" style="color: black;"><font size="4"> Bracelet+: Harvesting the Leaked RF Energy in VLC with Wearable Bracelet Antenna</font></a><br>
+							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/abs/10.1145/3447993.3483271" style="color: black;"><font size="4"> RadioInLight: Doubling the Data Rate of VLC Systems</font></a><br>
+							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/abs/10.1145/3384419.3430728" style="color: black;"><font size="4"> Breaking the limitations of visible light communication through its side channel</font></a> <br>
+							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/pdf/10.1145/3372224.3419187" style="color: black;"><font size="4"> Sniffing visible light communication through walls</font></a> <br>
+							<font size="4"><strong>Minhao Cui</strong>, Yuda Feng, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font></li>
+					</ul>	
+			</section>
+		</div>
 
 		<!---团队成员---->
 		<div class="container" style="width:1000px;float:left;">	
