--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="container" style="width:1300px;"> 
 		  <header class="header">
 			<h1 class="logo">
-				<font size="5">燕山大学ysuAIoT团队</font><br>
+				<font size="5">燕山大学智能物联系统ysuAIoT团队</font><br>
 				<font size="3">ysuAIoT Group @ Yanshan University</font>
 			</h1>
 		  </header>
@@ -108,45 +108,11 @@
 			<section class="publication">
 					<h1><font size="6"><strong>Projects and Funds</strong></font></h1>
 					<ul>
-							<li><font size="4"> EVLeSen: In-Vehicle Sensing with EV-Leaked Signal</font><br>
-								<font size="4"><strong>Minhao Cui</strong>, Binbin Xie, Qing Wang, Jie Xiong </font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><font size="4"> AquaKey: Exploiting the Randomness of the Underwater Visible Light Communication Channel for Key Extraction</font><br>
-								<font size="4">Lupeng Zhang, Pingchuan Wang, <strong>Minhao Cui</strong>, Jingwen Wei, Yu Tian, Jingchi Zhang, Jie Xiong, Lei Wang. </font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/10.1145/3631417" style="color: black;"><font size="4"> Wall Matters: Rethinking the Effect of Wall for Wireless Sensing</font></a><br>
-							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Jie Xiong. </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/10.1145/3570361.3613272" style="color: black;"><font size="4"> DancingAnt: Body-empowered Wireless Sensing Utilizing Pervasive Radiations from Powerline</font></a><br>
-							<font size="4"><strong>Minhao Cui</strong>, Binbin Xie, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/10.1145/3565287.3610262" style="color: black;"><font size="4"> LeakageScatter: Backscattering LiFi-leaked RF Signals </font></a><br>
-							<font size="3"> Muhammad Sarmad Mir<sup>*</sup>, <strong>Minhao Cui</strong><sup>*</sup>, Borja Genoves Guzman, Qing Wang, Jie Xiong, Domenico Giustiniano</font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/abs/10.1145/3581791.3596847" style="color: black;"><font size="4"> Boosting the Long Range Sensing Potential of LoRa</font></a><br>
-							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Xiangru Chen, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/10.1145/3560905.3568526" style="color: black;"><font size="4"> Bracelet+: Harvesting the Leaked RF Energy in VLC with Wearable Bracelet Antenna</font></a><br>
-							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/abs/10.1145/3447993.3483271" style="color: black;"><font size="4"> RadioInLight: Doubling the Data Rate of VLC Systems</font></a><br>
-							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/abs/10.1145/3384419.3430728" style="color: black;"><font size="4"> Breaking the limitations of visible light communication through its side channel</font></a> <br>
-							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/pdf/10.1145/3372224.3419187" style="color: black;"><font size="4"> Sniffing visible light communication through walls</font></a> <br>
-							<font size="4"><strong>Minhao Cui</strong>, Yuda Feng, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font></li>
+							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>
+							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>
+							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>
+							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>
+							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>					
 					</ul>	
 			</section>
 		</div>
