--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 		<!---发表论文---->
 		<div class="container" style="width:1000px;float:left;">	
-			<section class="publication">
+			<section class="Selected publication">
 					<h1><font size="6"><strong>Publications</strong></font></h1>
 					<ul>
 							<li><font size="4"> EVLeSen: In-Vehicle Sensing with EV-Leaked Signal</font><br>
