--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<div class="container" style="width:1300px;"> 
 		  <header class="header">
 			<h1 class="logo">
-				<font size="5">燕山大学智能物联系统团队</font><br>
+				<font size="5">燕山大学ysuAIoT团队</font><br>
 				<font size="3">ysuAIoT Group @ Yanshan University</font>
 			</h1>
 		  </header>
 		  <!-- Hero Section -->
 		  <section class="intro">
 			<div class="column">
-			  <img src="./files/ysuAIoT.png" style="width: 800px" alt="self"> </div>
+			  <img src="./files/ysuAIoT.png" style="width: 650px" alt="self"> </div>
 			<div class="column" deep="1">
 			  <p><font size="5">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by Prof. Wenyuan Liu (刘文远) in the School of Information Science and Engineering at <a href="https://www.ysu.edu.cn" style="color:blue;">Yanshan University</a>, Qinhuangdao, China. ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province.</p>
 			  <p><font size="5">Our reserach topic is Intelligent Sensing and Mobile Computing, especially for the activity recognition in elderly healthcare with diverse multiple modalities, including Camera, Audio, WiFi, RFID, mmWave Radar, IMU, and etc.</font></p>
@@ -57,7 +57,7 @@
 
 		<!---发表论文---->
 		<div class="container" style="width:1000px;float:left;">	
-			<section class="Selected publication">
+			<section class="publication">
 					<h1><font size="6"><strong>Publications</strong></font></h1>
 					<ul>
 							<li><font size="4"> EVLeSen: In-Vehicle Sensing with EV-Leaked Signal</font><br>
@@ -69,36 +69,36 @@
 								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
 							<br>
 							<li><a href="https://dl.acm.org/doi/10.1145/3631417" style="color: black;"><font size="4"> Wall Matters: Rethinking the Effect of Wall for Wireless Sensing</font></a><br>
-								<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Jie Xiong. </font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Jie Xiong. </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
 							<br>
 							<li><a href="https://dl.acm.org/doi/10.1145/3570361.3613272" style="color: black;"><font size="4"> DancingAnt: Body-empowered Wireless Sensing Utilizing Pervasive Radiations from Powerline</font></a><br>
-								<font size="4"><strong>Minhao Cui</strong>, Binbin Xie, Qing Wang, Jie Xiong </font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<font size="4"><strong>Minhao Cui</strong>, Binbin Xie, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
 							<br>
 							<li><a href="https://dl.acm.org/doi/10.1145/3565287.3610262" style="color: black;"><font size="4"> LeakageScatter: Backscattering LiFi-leaked RF Signals </font></a><br>
-								<font size="3"> Muhammad Sarmad Mir<sup>*</sup>, <strong>Minhao Cui</strong><sup>*</sup>, Borja Genoves Guzman, Qing Wang, Jie Xiong, Domenico Giustiniano</font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<font size="3"> Muhammad Sarmad Mir<sup>*</sup>, <strong>Minhao Cui</strong><sup>*</sup>, Borja Genoves Guzman, Qing Wang, Jie Xiong, Domenico Giustiniano</font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
 							<br>
 							<li><a href="https://dl.acm.org/doi/abs/10.1145/3581791.3596847" style="color: black;"><font size="4"> Boosting the Long Range Sensing Potential of LoRa</font></a><br>
-								<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Xiangru Chen, Jie Xiong </font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Xiangru Chen, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
 							<br>
 							<li><a href="https://dl.acm.org/doi/10.1145/3560905.3568526" style="color: black;"><font size="4"> Bracelet+: Harvesting the Leaked RF Energy in VLC with Wearable Bracelet Antenna</font></a><br>
-								<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
 							<br>
 							<li><a href="https://dl.acm.org/doi/abs/10.1145/3447993.3483271" style="color: black;"><font size="4"> RadioInLight: Doubling the Data Rate of VLC Systems</font></a><br>
-								<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
 							<br>
 							<li><a href="https://dl.acm.org/doi/abs/10.1145/3384419.3430728" style="color: black;"><font size="4"> Breaking the limitations of visible light communication through its side channel</font></a> <br>
-								<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
 							<br>
 							<li><a href="https://dl.acm.org/doi/pdf/10.1145/3372224.3419187" style="color: black;"><font size="4"> Sniffing visible light communication through walls</font></a> <br>
-								<font size="4"><strong>Minhao Cui</strong>, Yuda Feng, Qing Wang, Jie Xiong </font><br>
-								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font></li>
+							<font size="4"><strong>Minhao Cui</strong>, Yuda Feng, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font></li>
 					</ul>	
 			</section>
 		</div>
@@ -108,11 +108,45 @@
 			<section class="publication">
 					<h1><font size="6"><strong>Projects and Funds</strong></font></h1>
 					<ul>
-							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>
-							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>
-							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>
-							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>
-							<li><font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023-2016, PI: Wenyuan Liu.</font><br></li><br>					
+							<li><font size="4"> EVLeSen: In-Vehicle Sensing with EV-Leaked Signal</font><br>
+								<font size="4"><strong>Minhao Cui</strong>, Binbin Xie, Qing Wang, Jie Xiong </font><br>
+								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><font size="4"> AquaKey: Exploiting the Randomness of the Underwater Visible Light Communication Channel for Key Extraction</font><br>
+								<font size="4">Lupeng Zhang, Pingchuan Wang, <strong>Minhao Cui</strong>, Jingwen Wei, Yu Tian, Jingchi Zhang, Jie Xiong, Lei Wang. </font><br>
+								<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/10.1145/3631417" style="color: black;"><font size="4"> Wall Matters: Rethinking the Effect of Wall for Wireless Sensing</font></a><br>
+							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Jie Xiong. </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/10.1145/3570361.3613272" style="color: black;"><font size="4"> DancingAnt: Body-empowered Wireless Sensing Utilizing Pervasive Radiations from Powerline</font></a><br>
+							<font size="4"><strong>Minhao Cui</strong>, Binbin Xie, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/10.1145/3565287.3610262" style="color: black;"><font size="4"> LeakageScatter: Backscattering LiFi-leaked RF Signals </font></a><br>
+							<font size="3"> Muhammad Sarmad Mir<sup>*</sup>, <strong>Minhao Cui</strong><sup>*</sup>, Borja Genoves Guzman, Qing Wang, Jie Xiong, Domenico Giustiniano</font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/abs/10.1145/3581791.3596847" style="color: black;"><font size="4"> Boosting the Long Range Sensing Potential of LoRa</font></a><br>
+							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Xiangru Chen, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/10.1145/3560905.3568526" style="color: black;"><font size="4"> Bracelet+: Harvesting the Leaked RF Energy in VLC with Wearable Bracelet Antenna</font></a><br>
+							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/abs/10.1145/3447993.3483271" style="color: black;"><font size="4"> RadioInLight: Doubling the Data Rate of VLC Systems</font></a><br>
+							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/abs/10.1145/3384419.3430728" style="color: black;"><font size="4"> Breaking the limitations of visible light communication through its side channel</font></a> <br>
+							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<br>
+							<li><a href="https://dl.acm.org/doi/pdf/10.1145/3372224.3419187" style="color: black;"><font size="4"> Sniffing visible light communication through walls</font></a> <br>
+							<font size="4"><strong>Minhao Cui</strong>, Yuda Feng, Qing Wang, Jie Xiong </font><br>
+							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font></li>
 					</ul>	
 			</section>
 		</div>
