--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>燕山大学ysuAIoT团队主页</title>
+<title>燕山大学智能物联系统AIoT团队主页</title>
 <link href="./files/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 		<div class="container" style="width:1300px;"> 
 		  <header class="header">
 			<h1 class="logo">
-				<font size="5">燕山大学ysuAIoT团队</font><br>
+				<font size="5">燕山大学智能物联系统AIoT团队</font><br>
 				<font size="3">ysuAIoT Group @ Yanshan University</font>
 			</h1>
 		  </header>
