--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
 							<br>
 							<li><font size="4">非定位无线传感器网络导航的理论基础和关键技术研究</font><br>
 								<font size="4"><strong>国家自然科学基金面上项目</strong>, 2009-2012, PI: 刘文远</font><br></li>
+							<br>
+							<li><font size="4">基于侧信道可信融合的无线网络感知理论与关键技术研究</font><br>
+								<font size="4"><strong>国家自然科学基金面上项目</strong>, 2018-2021, PI: 王 林</font><br></li>
+							<br>
+							<li><font size="4">基于信道状态信息的参与式感知导航关键技术研究</font><br>
+								<font size="4"><strong>国家自然科学基金青年基金</strong>, 2014-2017, PI: 王 林</font><br></li>
+							<br>
+							<li><font size="4">非定位无线传感器网络导航的理论基础和关键技术研究</font><br>
+								<font size="4"><strong>国家自然科学基金青年基金</strong>, 2018-2020, PI: 厉斌斌</font><br></li>						
 					</ul>	
 			</section>
 		</div>
