--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 				<section class="TA">
 					<h1 style="color:;"><font size="6"><strong>Teaching</strong></font></h1>
 					<ul>
-						<li><font size="4"><strong>Fall 2020: </strong> COMPSCI 240 - Reasoning Under Uncertainty. </font></li>
-						<li><font size="4"><strong>Spring 2021: </strong> COMPSCI 240 - Reasoning Under Uncertainty. </font></li>
-						<li><font size="4"><strong>Fall 2021: </strong> COMPSCI 240 - Reasoning Under Uncertainty. </font></li>
-						<li><font size="4"><strong>Spring 2022: </strong> COMPSCI 240 - Reasoning Under Uncertainty. </font></li>
+						<li><font size="4"><strong>Fall 2023: </strong> Introduction to Software Engineering. </font></li>
+						<li><font size="4"><strong>Fall 2022: </strong> Introduction to Software Engineering. </font></li>
+						<li><font size="4"><strong>Fall 2021: </strong> Introduction to Software Engineering. </font></li>
+						<li><font size="4"><strong>Fall 2020: </strong> Introduction to Software Engineering. </font></li>
 					</ul>
 
 					
