--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
 				<section class="award">
 					<h1 style="color:;"><font size="6"><strong>Group Members and Alumni</strong></font></h1>
 					<ul>
-						<li><font size="4">Dr. Phil Bernstein Graduate Scholarship in UMass Amherst, 2023</font></li>
-						<li><font size="4">Best Paper Award in SenSys, 2022</font></li>
-						<li><font size="4">Common Good Fellowship in UMass Amherst, 2022</font></li>
-						<li><font size="4">Ph.D. Candidacy with Distinction in UMass Amherst, 2022</font></li>
-						<li><font size="4">Student Travel Grants in MobiCom, 2021 </font></li>
-						<li><font size="4">Honourable Mention Award in MobiCom, 2020</font></li>
-						<li><font size="4">National Scholarship in China, 2017 and 2018</font></li>
+						<li><font size="4">王 林 (2015年博士毕业，信息科学与工程学院科研副院长，教授、博士生导师)</font></li>
+						<li><font size="4">厉斌斌 (2019年博士毕业，经济管理学院副教授、硕士生导师)</font></li>
+						<li><font size="4">李金成 (2020级博士生)</font></li>
+						<li><font size="4">冯凯东 (2021级博士生)</font></li>
+						<li><font size="4">刘 康 (2020级硕博连读)</font></li>
+						<li><font size="4">2022级硕士生：刘桂安 &nbsp;&nbsp; 周如意 &nbsp;&nbsp; 伊霖昊 &nbsp;&nbsp; 杜鹏翔 &nbsp;&nbsp; 刘雅钊</font></li>
+						<li><font size="4">2023级硕士生：孙旭初 &nbsp;&nbsp; 柳元晟 &nbsp;&nbsp; 崔鑫维 &nbsp;&nbsp; 凌洋铭 &nbsp;&nbsp; 王浩哲</font></li>
 					</ul>
 				</section>
 		</div>
