--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
 						<li><font size="4">李金成 (2020级博士生)</font></li>
 						<li><font size="4">冯凯东 (2021级博士生)</font></li>
 						<li><font size="4">刘 康 (2020级硕博连读)</font></li>
+						<li><font size="4">杨子豪 (2022级硕博连读)</font></li>						
+						<li><font size="4">2023级硕士生：孙旭初 &nbsp;&nbsp; 柳元晟 &nbsp;&nbsp; 崔鑫维 &nbsp;&nbsp; 凌洋铭 &nbsp;&nbsp; 王浩哲</font></li>					
 						<li><font size="4">2022级硕士生：刘桂安 &nbsp;&nbsp; 周如意 &nbsp;&nbsp; 伊霖昊 &nbsp;&nbsp; 杜鹏翔 &nbsp;&nbsp; 刘雅钊</font></li>
-						<li><font size="4">2023级硕士生：孙旭初 &nbsp;&nbsp; 柳元晟 &nbsp;&nbsp; 崔鑫维 &nbsp;&nbsp; 凌洋铭 &nbsp;&nbsp; 王浩哲</font></li>
 					</ul>
 				</section>
 		</div>
