--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<!---发表论文---->
 		<div class="container" style="width:1000px;float:left;">	
 			<section class="publication">
-					<h1><font size="6"><strong>Publications</strong></font></h1>
+					<h1><font size="6"><strong>Selected Publications</strong></font></h1>
 					<ul>
 							<li><a href="https://dl.acm.org/doi/10.1145/3631417" style="color: black;"><font size="4"> Wall Matters: Rethinking the Effect of Wall for Wireless Sensing</font></a><br>
 							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Jie Xiong. </font><br>
