--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 						<li><font size="4">刘 康 (2020级硕博连读)</font></li>
 						<li><font size="4">2023级硕士生：孙旭初 &nbsp;&nbsp; 柳元晟 &nbsp;&nbsp; 崔鑫维 &nbsp;&nbsp; 凌洋铭 &nbsp;&nbsp; 王浩哲</font></li>					
 						<li><font size="4">2022级硕士生：刘桂安 &nbsp;&nbsp; 周如意 &nbsp;&nbsp; 伊霖昊 &nbsp;&nbsp; 杜鹏翔 &nbsp;&nbsp; 刘雅钊</font></li>
+						<li><font size="4">2022级硕士生：刘文博 &nbsp;&nbsp; 孙长宇 &nbsp;&nbsp; 焦志伟 &nbsp;&nbsp; 赵晨鹏 &nbsp;&nbsp;</font></li>
 					</ul>
 				</section>
 		</div>
