--- a/index.html
+++ b/index.html
@@ -60,37 +60,37 @@
 			<section class="publication">
 					<h1><font size="6"><strong>Selected Publications</strong></font></h1>
 					<ul>
-							<li><a href="https://dl.acm.org/doi/10.1145/3631417" style="color: black;"><font size="4"> Wall Matters: Rethinking the Effect of Wall for Wireless Sensing</font></a><br>
-							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Jie Xiong. </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<li><a href="https://ieeexplore.ieee.org/document/10269096" style="color: black;"><font size="4"> Towards One-to-Many Respiration Monitoring via Dual-mode Acoustic Signals</font></a><br>
+							<font size="4">KounKou Vincent, Lin Wang*, Wenyuan Liu.</font><br>
+							<font size="4"><strong>IEEE Transactions on Consumer Electronics</strong>, 2024.</font><br></li>
+							<br>							
+							<li><a href="https://ieeexplore.ieee.org/document/10462909" style="color: black;"><font size="4"> AcHand: Detecting Respiratory Rate of operator via Smartphone Microphone</font></a><br>
+							<font size="4">KounKou Vincent, Lin Wang*, Nan Jing, Wenyuan Liu.</font><br>
+							<font size="4"><strong>IEEE Sensors Journal</strong>, 2024.</font><br></li>
+							<br>							
+							<li><a href="https://www.sciencedirect.com/science/article/pii/S156849462301164X" style="color: black;"><font size="4"> Human activity recognition through deep learning: Leveraging unique and common feature fusion in wearable multi-sensor systems</font></a><br>
+							<font size="4">Kang Liu, Chang Gao, Binbin Li, Wenyuan Liu*.</font><br>
+							<font size="4"><strong>Applied Soft Computing</strong>, 2024.</font><br></li>
+							<br>						
+							<li><a href="https://ieeexplore.ieee.org/document/10242319" style="color: black;"><font size="4"> Passive Multi-user Gait Identification through micro-Doppler Calibration using mmWave Radar</font></a><br>
+							<font size="4">Jincheng Li, Binbin Li, Lin Wang, Wenyuan Liu*. </font><br>
+							<font size="4"><strong>IEEE Internet of Things Journal</strong>, 2023.</font><br></li>
 							<br>
-							<li><a href="https://dl.acm.org/doi/10.1145/3570361.3613272" style="color: black;"><font size="4"> DancingAnt: Body-empowered Wireless Sensing Utilizing Pervasive Radiations from Powerline</font></a><br>
-							<font size="4"><strong>Minhao Cui</strong>, Binbin Xie, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<li><a href="https://ieeexplore.ieee.org/document/10189384" style="color: black;"><font size="4"> Enabling Fine-grained Residual Liquid Height Estimation with Passive RFID Tags</font></a><br>
+							<font size="4">Binbin Li, Yu Wang, Yuqiu Zhao, Wenyuan Liu*.</font><br>
+							<font size="4"><strong>IEEE Sensors Journal</strong>, 2023.</font><br></li>
 							<br>
-							<li><a href="https://dl.acm.org/doi/10.1145/3565287.3610262" style="color: black;"><font size="4"> LeakageScatter: Backscattering LiFi-leaked RF Signals </font></a><br>
-							<font size="3"> Muhammad Sarmad Mir<sup>*</sup>, <strong>Minhao Cui</strong><sup>*</sup>, Borja Genoves Guzman, Qing Wang, Jie Xiong, Domenico Giustiniano</font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<li><a href="https://ieeexplore.ieee.org/document/10024045" style="color: black;"><font size="4"> RFPad: Enabling Device-free Handwriting Recognition with a Tag Square </font></a><br>
+							<font size="3"> Wenyuan Liu, Huan Du, Binbin Li*, Jincheng Li, Zhuo Chang, Lin Wang.</font><br>
+							<font size="4"><strong>IEEE Transactions on Human-Machine Systems</strong>, 2023.</font><br></li>
 							<br>
-							<li><a href="https://dl.acm.org/doi/abs/10.1145/3581791.3596847" style="color: black;"><font size="4"> Boosting the Long Range Sensing Potential of LoRa</font></a><br>
-							<font size="4">Binbin Xie, <strong>Minhao Cui</strong>, Deepak Ganesan, Xiangru Chen, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
+							<li><a href="https://ieeexplore.ieee.org/document/9780018" style="color: black;"><font size="4"> AcoPalm: Acoustical Palmprint-based Non-contact Identity Authentication</font></a><br>
+							<font size="4">Lin Wang, Wenshuang Chen, Nan Jing, Zhuo Chang, Binbin Li, Wenyuan Liu.</font><br>
+							<font size="4"><strong>IEEE Transactions on Industrial Informatics</strong>, 2022.</font><br></li>
 							<br>
-							<li><a href="https://dl.acm.org/doi/10.1145/3560905.3568526" style="color: black;"><font size="4"> Bracelet+: Harvesting the Leaked RF Energy in VLC with Wearable Bracelet Antenna</font></a><br>
-							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/abs/10.1145/3447993.3483271" style="color: black;"><font size="4"> RadioInLight: Doubling the Data Rate of VLC Systems</font></a><br>
-							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/abs/10.1145/3384419.3430728" style="color: black;"><font size="4"> Breaking the limitations of visible light communication through its side channel</font></a> <br>
-							<font size="4"><strong>Minhao Cui</strong>, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font><br></li>
-							<br>
-							<li><a href="https://dl.acm.org/doi/pdf/10.1145/3372224.3419187" style="color: black;"><font size="4"> Sniffing visible light communication through walls</font></a> <br>
-							<font size="4"><strong>Minhao Cui</strong>, Yuda Feng, Qing Wang, Jie Xiong </font><br>
-							<font size="4"><strong>In Proceedings of ACM MobiHoc</strong>, 2023.</font></li>
+							<li><a href="https://dl.acm.org/doi/10.1145/3560905.3568526" style="color: black;"><font size="4"> Enabling Fine-Grained Shopping Behavior Information Acquisition with Dual-RFID-Tags</font></a><br>
+							<font size="4">Wenyuan Liu, Jian Wang, Binbin Li*, Lin Wang.</font><br>
+							<font size="4"><strong>IEEE Internet of Things Journal</strong>, 2020.</font><br></li>				
 					</ul>	
 			</section>
 		</div>
