--- a/index.html
+++ b/index.html
@@ -34,24 +34,18 @@
 			<h1><font size="6"><strong>News!</strong></font></h1>
 			</section>
 			<ul>
-			<li><font size="5"><strong>Feb 2024</strong></font><br>
-				<font size="4">Our paper is accepted at MobiCom '24. </font>
-			</li>
-			<li><font size="5"><strong>Jan 2024</strong></font><br>
-				<font size="4">Our paper is accepted at IMWUT/UbiComp '24. </font>
-			</li>
-			<li><font size="5"><strong>October 2023</strong></font><br>
-				<font size="4">Our paper is accepted at IMWUT/UbiComp '24. </font>
-			</li>
-			<li><font size="5"><strong>October 2023</strong></font><br>
-				<font size="4">I am happy to receive the Dr. Phil Bernstein Graduate Scholarship. </font>
-			</li>
-			<li><font size="5"><strong>September 2023</strong></font><br>
-				<font size="4">Bracelet+ is invited by ACM GetMobile. </font>
-			</li>
-			<li><font size="5"><strong>August 2023</strong></font><br>
-					<font size="4">Our paper is accepted at MobiCom '23. </font>
-			</li>
+				<li><font size="5"><strong>Feb 2024</strong></font><br>
+					<font size="4">Our paper is accepted by TCE. </font>
+				</li>
+				<li><font size="5"><strong>Jan 2024</strong></font><br>
+					<font size="4">Our paper is accepted by SensorJ. </font>
+				</li>
+				<li><font size="5"><strong>December 2023</strong></font><br>
+					<font size="4">Our paper is accepted by ASC. </font>
+				</li>
+				<li><font size="5"><strong>September 2023</strong></font><br>
+					<font size="4">Our paper is accepted by IoTJ. </font>
+				</li>
 			</ul>
 		</div>	
 
