--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 		</div>
 
 		<!---研究项目---->
-		<div class="container" style="width:1000px;float:left;">	
+		<div class="container" style="width:600px;float:left;">	
 			<section class="publication">
-					<h1><font size="6"><strong>Projects and Funds</strong></font></h1>
+					<h1><font size="6"><strong>Funds</strong></font></h1>
 					<ul>
 							<li><font size="4">基于射频信号图像化特征变换的并发连续行为识别和轨迹追踪技术研究</font><br>
 								<font size="4"><strong>国家自然科学基金面上项目</strong>, 2017-2020, PI: 刘文远</font><br></li>
@@ -116,6 +116,26 @@
 					</ul>	
 			</section>
 		</div>
+		<!---横向课题---->
+		<div style="width:600px;float:right;">
+			<section class="news">
+			<h1><font size="6"><strong>Projects</strong></font></h1>
+			</section>
+			<ul>
+				<li><font size="5"><strong>Feb 2024</strong></font><br>
+					<font size="4">Our paper is accepted by TCE. </font>
+				</li>
+				<li><font size="5"><strong>Jan 2024</strong></font><br>
+					<font size="4">Our paper is accepted by SensorJ. </font>
+				</li>
+				<li><font size="5"><strong>December 2023</strong></font><br>
+					<font size="4">Our paper is accepted by ASC. </font>
+				</li>
+				<li><font size="5"><strong>September 2023</strong></font><br>
+					<font size="4">Our paper is accepted by IoTJ. </font>
+				</li>
+			</ul>
+		</div>				
 
 		<!---团队成员---->
 		<div class="container" style="width:1000px;float:left;">	
