--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		</div>
 
 		<!---研究项目---->
-		<div class="container" style="width:600px;float:left;">	
+		<div class="container" style="width:650px;float:left;">	
 			<section class="publication">
 					<h1><font size="6"><strong>Funds</strong></font></h1>
 					<ul>
@@ -117,25 +117,30 @@
 			</section>
 		</div>
 		<!---横向课题---->
-		<div style="width:600px;float:right;">
-			<section class="news">
-			<h1><font size="6"><strong>Projects</strong></font></h1>
+		<div class="container" style="width:650px;float:right;">	
+			<section class="publication">
+					<h1><font size="6"><strong>Selected Projects</strong></font></h1>
+					<ul>
+							<li><font size="4">数字管网系统设计及大数据分析</font><br>
+								<font size="4"><strong>企事业单位委托科技项目</strong>, 2023-2024.</font><br></li>
+							<br>
+							<li><font size="4">沧州黄骅港矿石港务有限公司综合管理信息系统</font><br>
+								<font size="4"><strong>企事业单位委托科技项目</strong>, 2023-2024.</font><br></li>
+							<br>
+							<li><font size="4">多港区装卸设备智能化集中控制技术研究</font><br>
+								<font size="4"><strong>企事业单位委托科技项目</strong>, 2022-2023.</font><br></li>
+							<br>
+							<li><font size="4">京津冀协同下的“一键通”大宗干散货智慧物流示范工程</font><br>
+								<font size="4"><strong>企事业单位委托科技项目</strong>, 2019-2020.</font><br></li>
+							<br>
+							<li><font size="4">智慧旅游平台与旅发大会信息化建设项目</font><br>
+								<font size="4"><strong>企事业单位委托科技项目</strong>, 2017-2018.</font><br></li>	
+							<br>
+							<li><font size="4">丝绸之路招投标大数据平台</font><br>
+								<font size="4"><strong>企事业单位委托科技项目</strong>, 2017-2018.</font><br></li>						
+					</ul>	
 			</section>
-			<ul>
-				<li><font size="5"><strong>Feb 2024</strong></font><br>
-					<font size="4">Our paper is accepted by TCE. </font>
-				</li>
-				<li><font size="5"><strong>Jan 2024</strong></font><br>
-					<font size="4">Our paper is accepted by SensorJ. </font>
-				</li>
-				<li><font size="5"><strong>December 2023</strong></font><br>
-					<font size="4">Our paper is accepted by ASC. </font>
-				</li>
-				<li><font size="5"><strong>September 2023</strong></font><br>
-					<font size="4">Our paper is accepted by IoTJ. </font>
-				</li>
-			</ul>
-		</div>				
+		</div>			
 
 		<!---团队成员---->
 		<div class="container" style="width:1000px;float:left;">	
