--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
 				<section class="TA">
 					<h1 style="color:;"><font size="6"><strong>Teaching</strong></font></h1>
 					<ul>
-						<li><font size="4"><strong>Fall 2023: </strong> Introduction to Software Engineering. </font></li>
+						<li><font size="4"><strong>Spring 2024: </strong> Data Structure, Thinking with Data. </font></li>
+						<li><font size="4"><strong>Fall 2023: </strong> Introduction to Software Engineering, Computer Network. </font></li>
 						<li><font size="4"><strong>Fall 2022: </strong> Introduction to Software Engineering. </font></li>
 						<li><font size="4"><strong>Fall 2021: </strong> Introduction to Software Engineering. </font></li>
 						<li><font size="4"><strong>Fall 2020: </strong> Introduction to Software Engineering. </font></li>
