--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<font size="4">Lin Wang, Wenshuang Chen, Nan Jing, Zhuo Chang, Binbin Li, Wenyuan Liu.</font><br>
 							<font size="4"><strong>IEEE Transactions on Industrial Informatics</strong>, 2022.</font><br></li>
 							<br>
-							<li><a href="https://dl.acm.org/doi/10.1145/3560905.3568526" style="color: black;"><font size="4"> Enabling Fine-Grained Shopping Behavior Information Acquisition with Dual-RFID-Tags</font></a><br>
+							<li><a href="https://ieeexplore.ieee.org/document/9057556" style="color: black;"><font size="4"> Enabling Fine-Grained Shopping Behavior Information Acquisition with Dual-RFID-Tags</font></a><br>
 							<font size="4">Wenyuan Liu, Jian Wang, Binbin Li*, Lin Wang.</font><br>
 							<font size="4"><strong>IEEE Internet of Things Journal</strong>, 2020.</font><br></li>				
 					</ul>	
