--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			</section>
 		</div>
 		<!---横向课题---->
-		<div class="container" style="width:600px;float:right;">	
+		<div style="width:600px;float:right;">	
 			<section class="publication">
 					<h1><font size="6"><strong>Selected Projects</strong></font></h1>
 					<ul>
