--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				  ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province. </p>
 			  <p><font size="5">Prof. Liu is also the CEO & Founder of Yanruan Group (<a href="https://www.ysusoft.com/">燕软集团</a>) since 2003, which deeply focuses on Industrial Internet and Consumer Internet for many years and have servered more than 1000 companies in software and systems.</p>
 			  <p><font size="5">Our reserach topic is Intelligent Sensing and Mobile Computing, especially for the activity recognition in elderly healthcare with diverse multiple modalities, including Camera, Audio, WiFi, RFID, mmWave Radar, IMU, and etc.</font></p>
-			  <p><font size="5">Email: ysuaiot@gmail.com; wyliu@ysu.edu.cn</font></p>
+			  <p><font size="5">Email: ysuaiot@gmail.com  &nbsp;&nbsp; &nbsp;&nbsp;   wyliu@ysu.edu.cn</font></p>
 			</div>
 		  </section>
 
