--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		</div>
 			
 		<!---横向课题---->
-		<div style="width:600px;float:right;">	
+		<div style="width:600px;height:1000px;float:right;">	
 			<section class="publication">
 					<h1><font size="6"><strong>Selected Projects</strong></font></h1>
 					<ul>
