--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			</section>
 		</div>			
 		<!---研究项目---->
-		<div class="container" style="width:500px;float:left;">	
+		<div style="width:500px;float:left;">	
 			<section class="publication">
 					<h1><font size="6"><strong>Funds</strong></font></h1>
 					<ul>
