--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			  <p><font size="5">Email: ysuaiot@gmail.com  &nbsp;&nbsp; &nbsp;&nbsp;   wyliu@ysu.edu.cn</font></p>
 			</div>
 		  </section>
-
+		</div>
 
 		<!---团队新闻---->
 		<div style="width:300px;height:1500px;float:right;">
