--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		</div>
 		<p>	
 		<!---横向课题---->
-		<div style="width:500px;padding-top: 50px;float:right;">	
+		<div style="width:500px;padding-left: 50px;float:right;">	
 			<section class="publication">
 					<h1><font size="6"><strong>Selected Projects</strong></font></h1>
 					<ul>
