--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 		<!-- Main Container -->
-
 		<div class="container" style="width:1300px;"> 
 			  <header class="header">
 				<h1 class="logo">
@@ -19,7 +18,8 @@
 			  <!-- Hero Section -->
 			  <section class="intro">
 				<div class="column">
-				  <img src="./files/ysuAIoT.png" style="width: 650px;padding-top: 45px;" alt="self"> </div>
+				  <img src="./files/ysuAIoT.png" style="width: 650px;padding-top: 45px;" alt="self"> 
+				</div>
 				<div class="column" deep="1">
 				  <p><font size="5">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by Prof. Wenyuan Liu (刘文远), the School of Information Science and Engineering, <a href="https://www.ysu.edu.cn" style="color:blue;">Yanshan University</a>, Qinhuangdao, China. 
 					  ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province. </p>
@@ -30,7 +30,7 @@
 			  </section>
 			
 		<!---团队新闻---->
-		<div style="width:300px;height:1500px;float:right;">
+		<div  class="container" style="width:300px;height:1500px;float:right;">
 			<section class="news">
 			<h1><font size="6"><strong>News!</strong></font></h1>
 			</section>
@@ -91,7 +91,7 @@
 		</div>
 		<p>	
 		<!---横向课题---->
-		<div style="width:500px;padding-left: 50px;float:right;">	
+		<div  class="container" style="width:500px;float:right;">	
 			<section class="publication">
 					<h1><font size="6"><strong>Selected Projects</strong></font></h1>
 					<ul>
