--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		<p>	
 		<!---横向课题---->
 		<div  class="container" style="width:600px;float:right;">	
-			<section class="publication">
+			<section>
 					<h1><font size="6"><strong>Selected Projects</strong></font></h1>
 					<ul>
 							<li><font size="4">数字管网系统设计及大数据分析</font><br>
@@ -117,7 +117,7 @@
 		</div>			
 		<!---研究项目---->
 		<div class="container" style="width:700px;float:left;">	
-			<section class="publication">
+			<section>
 					<h1><font size="6"><strong>Funds</strong></font></h1>
 					<ul>
 							<li><font size="4">基于射频信号图像化特征变换的并发连续行为识别和轨迹追踪技术研究</font><br>
