--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				<section class="award">
 					<h1 style="color:;"><font size="6"><strong>Group Members and Alumni</strong></font></h1>
 					<ul>
-						<li><font size="4">刘文远 (教授、博士生导师，计算机科学与技术学科带头人)</font></li>
+						<li><font size="4">刘文远 (团队负责人，教授、博士生导师，计算机科学与技术学科带头人)</font></li>
 						<li><font size="4">王 林 (2015年博士毕业，信息科学与工程学院科研副院长，教授、博士生导师)</font></li>
 						<li><font size="4">厉斌斌 (2019年博士毕业，经济管理学院副教授、硕士生导师)</font></li>
 						<li><font size="4">李金成 (2020级博士生)</font></li>
