--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						<li><font size="4">刘 康 (2020级硕博连读)</font></li>
 						<li><font size="4">2023级硕士生：孙旭初 &nbsp;&nbsp; 柳元晟 &nbsp;&nbsp; 崔鑫维 &nbsp;&nbsp; 凌洋铭 &nbsp;&nbsp; 王浩哲</font></li>					
 						<li><font size="4">2022级硕士生：刘桂安 &nbsp;&nbsp; 周如意 &nbsp;&nbsp; 伊霖昊 &nbsp;&nbsp; 杜鹏翔 &nbsp;&nbsp; 刘雅钊</font></li>
-						<li><font size="4">2022级硕士生：刘文博 &nbsp;&nbsp; 孙长宇 &nbsp;&nbsp; 焦志伟 &nbsp;&nbsp; 赵晨鹏 &nbsp;&nbsp;</font></li>
+						<li><font size="4">2021级硕士生：刘文博 &nbsp;&nbsp; 孙长宇 &nbsp;&nbsp; 焦志伟 &nbsp;&nbsp; 赵晨鹏 &nbsp;&nbsp;</font></li>
 					</ul>
 				</section>
 		</div>
@@ -166,10 +166,13 @@
 					<h1 style="color:;"><font size="6"><strong>Teaching</strong></font></h1>
 					<ul>
 						<li><font size="4"><strong>Spring 2024: </strong> Data Structure, Thinking with Data. </font></li>
-						<li><font size="4"><strong>Fall 2023: </strong> Introduction to Software Engineering, Computer Network. </font></li>
-						<li><font size="4"><strong>Fall 2022: </strong> Introduction to Software Engineering. </font></li>
-						<li><font size="4"><strong>Fall 2021: </strong> Introduction to Software Engineering. </font></li>
-						<li><font size="4"><strong>Fall 2020: </strong> Introduction to Software Engineering. </font></li>
+						<li><font size="4"><strong>Fall 2023: </strong> Introduction to Software Engineering, Compilation Principle, Computer Network. </font></li>
+						<li><font size="4"><strong>Spring 2023: </strong> Data Structure, Thinking with Data. </font></li>						
+						<li><font size="4"><strong>Fall 2022: </strong> Introduction to Software Engineering, Compilation Principle, Computer Network. </font></li>
+						<li><font size="4"><strong>Spring 2022: </strong> Data Structure, Thinking with Data. </font></li>						
+						<li><font size="4"><strong>Fall 2021: </strong> Introduction to Software Engineering, Compilation Principle, Computer Network. </font></li>
+						<li><font size="4"><strong>Spring 2021: </strong> Data Structure. </font></li>
+						<li><font size="4"><strong>Fall 2020: </strong> Introduction to Software Engineering, Compilation Principle, Computer Network. </font></li>
 					</ul>
 
 					
