--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 						<li><font size="4">刘文远 (团队负责人，教授、博士生导师，计算机科学与技术学科带头人)</font></li>
 						<li><font size="4">王 林 (2015年博士毕业，信息科学与工程学院科研副院长，教授、博士生导师)</font></li>
 						<li><font size="4">厉斌斌 (2019年博士毕业，经济管理学院副教授、硕士生导师)</font></li>
-						<li><font size="4">李金成 (2020级博士生, 步态感知)</font></li>
-						<li><font size="4">冯凯东 (2021级博士生, 捆绑推荐)</font></li>
-						<li><font size="4">刘 康 (2020级硕博连读, 多IMU感知)</font></li>
+						<li><font size="4">李金成 (2020级博士生, 步态感知, 1 paper in IoTJ)</font></li>
+						<li><font size="4">冯凯东 (2021级博士生, 捆绑推荐, 1 paper in TRS)</font></li>
+						<li><font size="4">刘 康 (2020级硕博连读, 多IMU行为感知, 1 paper in ASC)</font></li>
 						<li><font size="4">2023级硕士生：孙旭初 &nbsp;&nbsp; 柳元晟 &nbsp;&nbsp; 崔鑫维 &nbsp;&nbsp; 凌洋铭 &nbsp;&nbsp; 王浩哲</font></li>					
 						<li><font size="4">2022级硕士生：刘桂安 &nbsp;&nbsp; 周如意 &nbsp;&nbsp; 伊霖昊 &nbsp;&nbsp; 杜鹏翔 &nbsp;&nbsp; 刘雅钊</font></li>
 						<li><font size="4">2021级硕士生：刘文博 &nbsp;&nbsp; 孙长宇 &nbsp;&nbsp; 焦志伟 &nbsp;&nbsp; 赵晨鹏 &nbsp;&nbsp;</font></li>
