--- a/index.html
+++ b/index.html
@@ -146,9 +146,13 @@
 				<section class="award">
 					<h1 style="color:;"><font size="6"><strong>Group Members and Alumni</strong></font></h1>
 					<ul>
-						<li><font size="4">刘文远 (团队负责人，教授、博士生导师，计算机科学与技术学科带头人)</font></li>
-						<li><font size="4">王 林 (2015年博士毕业，信息科学与工程学院科研副院长，教授、博士生导师)</font></li>
-						<li><font size="4">厉斌斌 (2019年博士毕业，经济管理学院副教授、硕士生导师)</font></li>
+						<li><font size="4">刘文远 (<strong>团队负责人</strong>，信息科学与工程学院教授、博士生导师，计算机科学与技术学科带头人)</font></li>
+						<li><font size="4">王 林 (2015年博士毕业于燕山大学，信息科学与工程学院科研副院长，教授、博士生导师)</font></li>
+						<li><font size="4">王常武 (2006年博士毕业于北京理工大学，信息科学与工程学院教授、硕士生导师)</font></li>
+						<li><font size="4">陈子军(2002年博士毕业于复旦大学，信息科学与工程学院教授、硕士生导师)</font></li>
+						<li><font size="4">高  畅 (2016年博士毕业于哈尔滨工业大学，信息科学与工程学院副教授、硕士生导师)</font></li>
+						<li><font size="4">于家新 (2022年博士毕业于燕山大学，信息科学与工程学院讲师)</font></li>
+						<li><font size="4">厉斌斌 (2019年博士毕业于燕山大学，经济管理学院副教授、硕士生导师)</font></li>
 						<li><font size="4">李金成 (2020级博士生, 步态感知, 1 paper in IoTJ)</font></li>
 						<li><font size="4">冯凯东 (2021级博士生, 捆绑推荐, 1 paper in TRS)</font></li>
 						<li><font size="4">刘 康 (2020级硕博连读, 多IMU行为感知, 1 paper in ASC)</font></li>
