--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 						<li><font size="4">2023级硕士生：孙旭初 &nbsp;&nbsp; 柳元晟 &nbsp;&nbsp; 崔鑫维 &nbsp;&nbsp; 凌洋铭 &nbsp;&nbsp; 王浩哲</font></li>					
 						<li><font size="4">2022级硕士生：刘桂安 &nbsp;&nbsp; 周如意 &nbsp;&nbsp; 伊霖昊 &nbsp;&nbsp; 杜鹏翔 &nbsp;&nbsp; 刘雅钊</font></li>
 						<li><font size="4">2021级硕士生：刘文博 &nbsp;&nbsp; 孙长宇 &nbsp;&nbsp; 焦志伟 &nbsp;&nbsp; 赵晨鹏 &nbsp;&nbsp;</font></li>
+						<li><font size="4">2020级硕士生 (已毕业)：张洪茹 &nbsp;&nbsp; 徐晨琪 &nbsp;&nbsp; 韩凯琪 &nbsp;&nbsp; 王凯丽 &nbsp;&nbsp; 王琳柯</font></li>
 					</ul>
 				</section>
 		</div>
