--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 				  <img src="./files/ysuAIoT.png" style="width: 650px;padding-top: 45px;" alt="self"> 
 				</div>
 				<div class="column" deep="1">
-				  <p><font size="5">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by Prof. Wenyuan Liu (刘文远), the School of Information Science and Engineering, <a href="https://www.ysu.edu.cn" style="color:blue;">Yanshan University</a>, Qinhuangdao, China. 
+				  <p><font size="5" style="padding-right:5px;">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by <strong>Prof. Wenyuan Liu (刘文远)</strong>strong> in the School of Information Science and Engineering, <a href="https://www.ysu.edu.cn" style="color:blue;">Yanshan University</a>, Qinhuangdao, China. 
 					  ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province. <br>
 				          Our reserach topic is Intelligent Sensing and Mobile Computing, especially for the activity recognition in elderly healthcare with diverse multiple modalities, including Camera, Audio, WiFi, RFID, mmWave Radar, IMU, and etc.
-				  <p><font size="5">Prof. Liu is also the CEO & Founder of Yanruan Group (<a href="https://www.ysusoft.com/">燕软集团</a>) since 2003, which deeply focuses on Industrial Internet and Consumer Internet for many years and have servered more than 1000 companies in software and systems.</p>
+				  <p><font size="5"  style="padding-right:5px;">Prof. Liu is also the CEO & Founder of Yanruan Group (<a href="https://www.ysusoft.com/">燕软集团</a>) since 2003, which deeply focuses on Industrial Internet and Consumer Internet for many years and have servered more than 1000 companies in software and systems.</p>
 				  <p><font size="5">Email: ysuaiot@gmail.com  &nbsp;&nbsp; &nbsp;&nbsp;   wyliu@ysu.edu.cn</font></p>
 				</div>
 			  </section>
