--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="column">
 				  <img src="./files/ysuAIoT.png" style="width: 650px;padding-top: 45px;" alt="self"> 
 				</div>
-				<div class="column" style="padding-right:5px;">
+				<div class="column" deep="1">
 				  <p><font size="5">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by <strong>Prof. Wenyuan Liu (刘文远)</strong>strong> in the School of Information Science and Engineering, <a href="https://www.ysu.edu.cn" style="color:blue;">Yanshan University</a>, Qinhuangdao, China. 
 					  ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province. <br>
 				          Our reserach topic is Intelligent Sensing and Mobile Computing, especially for the activity recognition in elderly healthcare with diverse multiple modalities, including Camera, Audio, WiFi, RFID, mmWave Radar, IMU, and etc.
