--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 			  <!-- Hero Section -->
 			  <section class="intro">
 				<div class="column">
-				  <img src="./files/ysuAIoT.png" style="width: 650px;padding-top: 45px;" alt="self"> 
+				  <img src="./files/ysuAIoT.png" style="width: 650px; padding-top: 18px;" alt="self"> 
 				</div>
 				<div class="column" deep="1">
-				  <p><font size="5">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by <strong>Prof. Wenyuan Liu (刘文远)</strong>strong> in the School of Information Science and Engineering, <a href="https://www.ysu.edu.cn" style="color:blue;">Yanshan University</a>, Qinhuangdao, China. 
-					  ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province. <br>
-				          Our reserach topic is Intelligent Sensing and Mobile Computing, especially for the activity recognition in elderly healthcare with diverse multiple modalities, including Camera, Audio, WiFi, RFID, mmWave Radar, IMU, and etc.
-				  <p><font size="5">Prof. Liu is also the CEO & Founder of Yanruan Group (<a href="https://www.ysusoft.com/">燕软集团</a>) since 2003, which deeply focuses on Industrial Internet and Consumer Internet for many years and have servered more than 1000 companies in software and systems.</p>
+				  <p style="font-size:18px;">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by <strong>Prof. Wenyuan Liu (刘文远)</strong> in School of Information Science and Engineering, <a href="https://www.ysu.edu.cn" style="color:blue;">Yanshan University</a>, Qinhuangdao, China. 
+					  ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province. </p>
+				      <p style="font-size:18px;">Our reserach topic is Intelligent Sensing and Mobile Computing, especially for the activity recognition in elderly healthcare with diverse multiple modalities, including Camera, Audio, WiFi, RFID, mmWave Radar, IMU, and etc.</p>
+					  <p style="font-size:18px;">Prof. Liu is also the CEO & Founder of Yanruan Group (<a href="https://www.ysusoft.com/">燕软集团</a>) since 2003, which deeply focuses on Industrial Internet and Consumer Internet for many years and have servered more than 1000 companies in software and systems.</p>
 				  <p><font size="5">Email: ysuaiot@gmail.com  &nbsp;&nbsp; &nbsp;&nbsp;   wyliu@ysu.edu.cn</font></p>
 				</div>
 			  </section>
 		<br>
 		<!---团队新闻---->
-		<div  class="container" style="width:300px;height:1000px;float:right;">
+		<div  class="container" style="width:300px;height:700px;float:right;">
 			<section class="news">
 			<h1><font size="6"><strong>News!</strong></font></h1>
 			</section>
@@ -91,7 +91,7 @@
 		</div>
 		<br>	
 		<!---横向课题---->
-		<div  class="container" style="width:500px;float:right;">	
+		<div style="width:550px;float:right; ">	
 			<section>
 					<h1><font size="6"><strong>Selected Projects</strong></font></h1>
 					<ul>
@@ -116,7 +116,7 @@
 			</section>
 		</div>			
 		<!---研究项目---->
-		<div class="container" style="width:580px;float:left;">	
+		<div style="width:650px;float:left;">	
 			<section>
 					<h1><font size="6"><strong>Funds</strong></font></h1>
 					<ul>
