--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				  <p style="font-size:18px;">We are the Artificial Intelligence of Things (ysuAIoT) research Group leaded by <strong>Prof. Wenyuan Liu (刘文远)</strong> in School of Information Science and Engineering, <a href="https://www.ysu.edu.cn" style="color:blue;">Yanshan University</a>, Qinhuangdao, China. 
 					  ysuAIoT is also a part of the Hebei Key Laboratory of Software Engineering, Networked Sensing and Big Data Engineering Research Center of Hebei Province. </p>
 				      <p style="font-size:18px;">Our reserach topic is Intelligent Sensing and Mobile Computing, especially for the activity recognition in elderly healthcare with diverse multiple modalities, including Camera, Audio, WiFi, RFID, mmWave Radar, IMU, and etc.</p>
-					  <p style="font-size:18px;">Prof. Liu is also the CEO & Founder of Yanruan Group (<a href="https://www.ysusoft.com/">燕软集团</a>) since 2003, which deeply focuses on Industrial Internet and Consumer Internet for many years and have servered more than 1000 companies in software and systems.</p>
+					  <p style="font-size:18px;">Prof. Liu is also the CEO & Founder of Yanruan Group (<a href="https://www.ysusoft.com/" style="color:blue;">燕软集团</a>) since 2003, which deeply focuses on Industrial Internet and Consumer Internet for many years and have servered more than 1000 companies in software and systems.</p>
 				  <p><font size="5">Email: ysuaiot@gmail.com  &nbsp;&nbsp; &nbsp;&nbsp;   wyliu@ysu.edu.cn</font></p>
 				</div>
 			  </section>
