--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 			<section class="publication">
 					<h1><font size="6"><strong>Selected Publications</strong></font></h1>
 					<ul>
+							<li><a href="https://dl.acm.org/doi/10.1145/3652865" style="color: black;"><font size="4"> Adaptive In-Context Learning with Large Language Models for Bundle Generation</font></a><br>
+							<font size="4">Zhu Sun, Kaidong Feng, Jie Yang, Hui Fang, Xinghua Qu, Yew-Soon Ong, Wenyuan Liu.</font><br>
+							<font size="4"><strong>ACM SIGIR</strong>, 2024.</font><br></li>
+							<br>							
+							<li><a href="https://dl.acm.org/doi/10.1145/3652865" style="color: black;"><font size="4"> Revisiting Bundle Recommendation for Intent-aware Product Bundling</font></a><br>
+							<font size="4">Zhu Sun, Kaidong Feng, Jie Yang, Hui Fang, Xinghua Qu, Yew-Soon Ong, Wenyuan Liu.</font><br>
+							<font size="4"><strong>ACM Transactions on Recommender Systems</strong>, 2024.</font><br></li>
+							<br>							
 							<li><a href="https://ieeexplore.ieee.org/document/10269096" style="color: black;"><font size="4"> Towards One-to-Many Respiration Monitoring via Dual-mode Acoustic Signals</font></a><br>
 							<font size="4">KounKou Vincent, Lin Wang*, Wenyuan Liu.</font><br>
 							<font size="4"><strong>IEEE Transactions on Consumer Electronics</strong>, 2024.</font><br></li>
@@ -155,7 +163,7 @@
 						<li><font size="4">厉斌斌 (2019年博士毕业于燕山大学，经济管理学院副教授、硕士生导师)</font></li>
 						<li><font size="4">李金成 (2020级博士生, 步态感知, 1 paper in IoTJ)</font></li>
 						<li><font size="4">刘 康 (2020级硕博连读, 多IMU行为感知, 1 paper in ASC)</font></li>						
-						<li><font size="4">冯凯东 (2021级博士生, 捆绑推荐, 1 paper in TRS)</font></li>
+						<li><font size="4">冯凯东 (2021级博士生, 捆绑推荐, 3 papers in SIGIR2023, SIGIR2024, TORS)</font></li>
 						<li><font size="4">陈 杨 (2022级博士生, 毫米波雷达感知)</font></li>
 						<li><font size="4">2023级硕士生：孙旭初 &nbsp;&nbsp; 柳元晟 &nbsp;&nbsp; 崔鑫维 &nbsp;&nbsp; 凌洋铭 &nbsp;&nbsp; 王浩哲</font></li>					
 						<li><font size="4">2022级硕士生：刘桂安 &nbsp;&nbsp; 周如意 &nbsp;&nbsp; 伊霖昊 &nbsp;&nbsp; 杜鹏翔 &nbsp;&nbsp; 刘雅钊</font></li>
