--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<section class="publication">
 					<h1><font size="6"><strong>Selected Publications</strong></font></h1>
 					<ul>
-							<li><a href="https://dl.acm.org/doi/10.1145/3652865" style="color: black;"><font size="4"> Adaptive In-Context Learning with Large Language Models for Bundle Generation</font></a><br>
+							<li><a href=" " style="color: black;"><font size="4"> Adaptive In-Context Learning with Large Language Models for Bundle Generation</font></a><br>
 							<font size="4">Zhu Sun, Kaidong Feng, Jie Yang, Hui Fang, Xinghua Qu, Yew-Soon Ong, Wenyuan Liu.</font><br>
 							<font size="4"><strong>ACM SIGIR</strong>, 2024.</font><br></li>
 							<br>							
