--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 			<h1><font size="6"><strong>News!</strong></font></h1>
 			</section>
 			<ul>
+				<li><font size="5"><strong>Mar 2024</strong></font><br>
+					<font size="4">Our paper is accepted by SIGIR2024 </font>
+				</li>
+				<li><font size="5"><strong>Mar 2024</strong></font><br>
+					<font size="4">Our paper is accepted by TORS. </font>
+				</li>				
 				<li><font size="5"><strong>Feb 2024</strong></font><br>
 					<font size="4">Our paper is accepted by TCE. </font>
 				</li>
